<resources>
    <string name="app_name">NarrativeGame</string>
    <string name="title_text">An Ordinary Day</string>
    <string name="start_button">Start Game</string>
    <string name="settings">Settings</string>
    <string name="inc_text">MadeWithHope Inc. 2024</string>
    <string name="chapter_PlaceHolder">Chapter X</string>
    <string name="chapter_One">Chapter 1: Morning</string>

    <string name="back_Button"><![CDATA[<]]> Back</string>
    <string name="text_placeholder">Press Next</string>
    <string name="next">Next</string>
    <string name="ChapterTwoStart">Chapter 2 : Day</string>
    <string name="finalChapter">Final Chapter : Evening</string>
    <string name="goOutsideContent">Ah outside. Birds are chirping, flowers are blooming. And you hear bees? … Oh frick those are killer wasps! RUN!</string>

    <string name="morningContent">It is morning. You wake up to your phone buzzing.
    It is time for a new day and you have a job, better get there fast!</string>
    <string name="morningChoiceOne">Sleep in</string>
    <string name="morningChoiceTwo">Go to Work</string>
    <string name="fired_Text">THIS IS THE LAST TIME, YOU ARE FIRED</string>

    <string name="goToWork">You hate this dang job. A man just entered your office and started blasting at you like crazy. Customers should always be wrong.
    How will you respond to this treason?</string>
    <string name="workChoiceOne">Pull a movie stunt</string>
    <string name="workChoiceOneText">You once saw this Chinese movie, so you try something out. Time slows and you strike his weak spots, and as you
    blow out your smoking fingers, the man collapses without a sound. You should flee this country now.</string>
    <string name="workChoiceTwo">Roast his bloodline</string>
    <string name="workFinale">What a catastrophic day, that guy was done like good job holy hell. You sit on a bench multiple kilometers away. What now?</string>
    <string name="workFinaleChoiceOne">Go to Alaska</string>
    <string name="goToAlaskaText">After today it is reasonable to want to change identities, I know a guy. I will introduce you.</string>
    <string name="workFinaleChoiceTwo">Bury sorrow in Music</string>

    <string name="sleepInMorning">You took a nice rest. But what\'s this?</string>

    <string name="sleepInDay">Because of your repeated offenses (this is not the first time), you are now fired. Great!
    Whatever can you do next?</string>
    <string name="sleepInMoreContent">Your beauty sleep is too important, screw the world am I right?
    Before you sleep you decide to take a selfie.</string>
    <string name="sleepInFinale">All you did today was sleep, how productive. What will you do now?</string>
    <string name="outsideFinale">So much for not staying indoors all day, but wasps don\'t take prisoners. What now?</string>
    <string name="sleepInFinaleChoiceOne">Sleep in?</string>
    <string name="sleepInFinaleChoiceOneText">*sigh* fine, guess sleeping in more can\'t be worse than what you did all day. Sleep well</string>
    <string name="sleepInFinaleChoiceTwo">Bully the creator of this app.</string>
    <string name="bullyChoiceContent">Yeah that does sound fun! Don\'t hold back tiger.</string>
    <string name="sleepInFinaleChoiceTwoText">You\'re just evil! Sounds fun.</string>

    <string name="sleepMore">Sleep in More!</string>
    <string name="goOutside">Go Walk Outside</string>
    <string name="recent_calls">Recent Calls</string>
    <string name="uh_oh">Uh Oh</string>
    <string name="lastMsg">Last msg: </string>
    <string name="callFrom">Call From: </string>
    <string name="takePictureBtn">Take Selfie</string>
    <string name="imageDescription">Showing a selfie</string>
    <string name="photoText">Lost my job lmao xddd</string>
    <string name="sendButton">Send</string>
    <string name="send_message_header">Send Message</string>
    <string name="type_text_hint">Type text…</string>
    <string name="game_over_header">Game Over!</string>
    <string name="thank_you_for_playing">Thank you for playing!</string>
    <string name="thank_you_video">Thank you Video</string>
    <string name="back_to_main_menu">Back To Main Menu</string>
    <string name="send_me_email">Send me Email</string>
    <string name="speech_text">Speech text…</string>
    <string name="no_mercy">No Mercy!</string>
    <string name="speak_now">Speak Now</string>
    <string name="take_that">TAKE THAT!</string>
    <string name="write_body">Write body...</string>
    <string name="attach_file">Attach File</string>
    <string name="send_email">Send Email</string>
    <string name="write_subject">Write subject...</string>
    <string name="send_me_email_two">Send me email</string>
    <string name="de_attach">Remove</string>
    <string name="cancel">Cancel</string>
</resources>